eagle-design-and-continue-thesis

--- a/Final_thesis/uw-ethesis.bib
+++ b/Final_thesis/uw-ethesis.bib
@@ -184,4 +184,56 @@
   year   = {2006},
 }
 
+@InProceedings{cognitive_1,
+  author    = {Prudham D, Evans JG.},
+  title     = {Factors associated with falls in the elderly: a community study.},
+  booktitle = {Age Ageing},
+  year      = {1981},
+}
+
+@Article{cognitive_2,
+  author  = {John C. Morris Eugene H. Rubin Edward J. Morris Stephen A. Mandel},
+  title   = {Senile Dementia of the Alzheimer's Type: An Important Risk Factor for Serious Falls},
+  journal = {Journal of Gerontology},
+  volume  = {42},
+  number  = {4},
+  month   = jul,
+}
+
+@Article{postural_1,
+  author  = {Asir John Samuel, John Solomon, Divya Mohan},
+  title   = {A Critical Review on the Normal Postural Control},
+  journal = {Physiotherapy and occupational Journal},
+  year    = {2015},
+  volume  = {8},
+  number  = {2},
+  pages   = {71-75},
+}
+
+@Article{postural_2,
+  author  = {Poonam K. Pardasaney, Mary D. Slavin, Robert C. Wagenaar, Nancy K. Latham, Pengsheng Ni, Alan M. Jette},
+  title   = {Conceptual limitations of balance measures for community-dwelling older adults},
+  journal = {Physical Therapy},
+  year    = {2013},
+  volume  = {93},
+  pages   = {1351-1368},
+  issn    = {10},
+}
+
+@Article{cardio_1,
+  author  = {Davies AJ, Kenny RA},
+  title   = {Falls presenting to the Accident and Emergency Department: types of presentation and risk factor profile},
+  journal = {Age Aging},
+  year    = {1996},
+  volume  = {25},
+  pages   = {362–6},
+}
+
+@Article{cardio_2,
+  author  = {Kapoor WN, Karpf M, Wieand S, Peterson JR, Levey GS Wishwa N. Kapoor, Michael Karpf, Sam Wieand, Jacqueline R. Peterson, Gerald S. Levey},
+  title   = {A prospective evaluation and follow-up of patients with syncope},
+  journal = {New England Journal of Medical},
+  year    = {1983},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
