--- a/Final_thesis/uw-ethesis.tex
+++ b/Final_thesis/uw-ethesis.tex
@@ -171,11 +171,21 @@ Nowadays, fall is becoming a dangerous issue which mostly cause the injuries and
 Before starting a research about falls, it is necessary to understand about the meaning of the term \textit{falls}. According to \gls{who}, a fall is defined as an event which results in a person coming to rest inadvertently on the ground or floor or other lower level with or without loss of consciousness or injury \cite{who}. 
 
 \section{Cause of a Fall}
-
+In recent years, a lot of researches have been done by different groups to find out the causes of falls. There have been different ways to classify the causes of a fall such as age and sex, drugs, cognitive functions, postural control, etc. However, because falling is an unintentional action, many causes usually combine to produce a fall. Therefore, these causes can be divided into two main categories, intrinsic and extrinsic.
 \subsection{Intrinsic risk factors}
+Intrinsic factors are the factors which are within the body. It is also the physical aspect of the body that can cause injuries. Intrinsic factors include physical diseases such as cognitive impairment, postural hypotension, cardiovascular problems, etc.\par
+\vspace{0.3cm}
+\textbf{\textit{Cognitive Impairment}}\par
+It is well recognized that cognitive impairment is the common cause of fall on human, especially the elderly. Due to the research of Prudheim \textit{et al.} in 1981, fallers have in general been found to have a higher prevalence of cognitive impairment than non-fallers \cite{cognitive_1}. It is also reported that human with dementia are approximately 3 times more likely to fall than non-demented \cite{cognitive_2}. The reason why patients with cognitive impairment are likely to fall is that they have increased reaction time, increased postural sway and increased leaning balance which result in the decrease on muscle strength, worse balance and poorer mobility, respectively. \par
+\vspace{0.3cm}
+\textbf{\textit{Postural Control}}\par
+Postural control is a complex motor skill that requires interaction of multiple body systems which results in the ability to maintain postural orientation or postural stability \cite{postural_1}\cite{postural_2}. The impairment of postural control is indicated as one of significant causes of the fall during any activities at any age. Impaired control of gait and balance are two main aspects of the postural control that have been considered in many studies about falls. Subjectively assessed gait has been reported to be abnormal in many fall activities and other studies using more objective measurements have found some relations between the impaired gait and balance and risk of falling \cite{bibli_book}.
 
+\vspace{0.3cm}
+\textbf{\textit{Cardiovascular problem}}\par
+Cardiovascular disorders are responsible for approximately 77\% of patients with unexplained or recurrent falls and falls associated with unexplained loss of consciousness \cite{cardio_1}. There is a fact that fallers with cardiovascular disorders have a greater mortality than those with non-cardiovascular or unknown causes\cite{cardio_2}.   
 \subsection{Extrinsic risk factors}
-
+Extrinsic factors are those related to the environment such as lighting, walking surface, loose carpets, and high or narrow steps. 
 \section{Consequence of Falls}
 
 \section{Challenge in Detecting Falls and Motivation for This Thesis}
