--- a/Final_thesis/uw-ethesis.tex
+++ b/Final_thesis/uw-ethesis.tex
@@ -186,6 +186,13 @@ Postural control is a complex motor skill that requires interaction of multiple 
 Cardiovascular disorders are responsible for approximately 77\% of patients with unexplained or recurrent falls and falls associated with unexplained loss of consciousness \cite{cardio_1}. There is a fact that fallers with cardiovascular disorders have a greater mortality than those with non-cardiovascular or unknown causes\cite{cardio_2}.   
 \subsection{Extrinsic risk factors}
 Extrinsic factors are those related to the environment such as lighting, walking surface, loose carpets, and high or narrow steps. 
+
+\vspace{0.3cm}
+\textbf{\textit{Dim lighting or glare}}\par
+Dim lighting is one significant cause of fall on human, especially on the elderly. While walking on the low light condition, 
+\vspace{0.3cm}
+\textbf{\textit{Surface of the tread}}\par
+
 \section{Consequence of Falls}
 
 \section{Challenge in Detecting Falls and Motivation for This Thesis}
