--- a/Final_thesis/uw-ethesis.tex
+++ b/Final_thesis/uw-ethesis.tex
@@ -189,7 +189,7 @@ Extrinsic factors are those related to the environment such as lighting, walking
 
 \vspace{0.3cm}
 \textbf{\textit{Dim lighting or glare}}\par
-Dim lighting is one significant cause of fall on human, especially on the elderly. While walking on the low light condition, 
+Dim lighting is one significant cause of fall on human, especially on the elderly. While walking on the low light condition, the patient's visibility is reduced which prevents them from detect the obstacles on the walkway and hence results in the fall because 
 \vspace{0.3cm}
 \textbf{\textit{Surface of the tread}}\par
 
