--- a/Final_thesis/uw-ethesis.tex
+++ b/Final_thesis/uw-ethesis.tex
@@ -189,10 +189,11 @@ Extrinsic factors are those related to the environment such as lighting, walking
 
 \vspace{0.3cm}
 \textbf{\textit{Dim lighting or glare}}\par
-Dim lighting is one significant cause of fall on human, especially on the elderly. While walking on the low light condition, the patient's visibility is reduced which prevents them from detect the obstacles on the walkway and hence results in the fall because 
+Dim lighting is one significant cause of fall on human, especially on the elderly. While walking on the low light condition, the patient's visibility is reduced which prevents them from detect the obstacles on the walking path and causing stumble and fall.Too bright lighting can also cause fall on human because of creating glares and distorting the way object look. \par
 \vspace{0.3cm}
-\textbf{\textit{Surface of the tread}}\par
+\textbf{\textit{Bad staircase design}}\par
 
+Bad staircase design 
 \section{Consequence of Falls}
 
 \section{Challenge in Detecting Falls and Motivation for This Thesis}
