bad_staircase_design

--- a/Final_thesis/uw-ethesis.tex
+++ b/Final_thesis/uw-ethesis.tex
@@ -189,11 +189,11 @@ Extrinsic factors are those related to the environment such as lighting, walking
 
 \vspace{0.3cm}
 \textbf{\textit{Dim lighting or glare}}\par
-Dim lighting is one significant cause of fall on human, especially on the elderly. While walking on the low light condition, the patient's visibility is reduced which prevents them from detect the obstacles on the walking path and causing stumble and fall.Too bright lighting can also cause fall on human because of creating glares and distorting the way object look. \par
+Dim lighting is one significant cause of fall on human, especially on the elderly. While walking on the low light condition, the patient's visibility is reduced which prevents them from detecting the obstacles on the walking path and causing stumble and fall. Too bright lighting can also cause fall on human because of creating glares and distorting the way object look. \par
 \vspace{0.3cm}
 \textbf{\textit{Bad staircase design}}\par
 
-Bad staircase design 
+Bad staircase design is also another extrinsic risk that cause the fall on human. Too high or too low rise of staircases have caused a number of falls because people fail to perceive the abnormal elevation change or incur a misstep on descent. Besides, slippery surface of the treads can cause strip on patients while walking up or down the stairs. One more mistake of staircase design that can lead to the fall is lighting on the stair. Poor visibility and inadequate lighting can cause a user to misread the stair edge, resulting in faulty foot placement and falls.
 \section{Consequence of Falls}
 
 \section{Challenge in Detecting Falls and Motivation for This Thesis}
