--- a/Final_thesis/uw-ethesis.bib
+++ b/Final_thesis/uw-ethesis.bib
@@ -33,7 +33,7 @@
   pages   = {2204-2207},
 }
 
-@Misc{fall_die,
+@Misc{ncoa,
   author  = {{Nation Council of Aging}},
   title   = {Falls Prevention Facts},
   url     = {https://www.ncoa.org/news/resources-for-reporters/get-the-facts/falls-prevention-facts/},
@@ -229,11 +229,18 @@
   pages   = {362–6},
 }
 
-@Article{cardio_2,
+@Article{ca,
   author  = {Kapoor WN, Karpf M, Wieand S, Peterson JR, Levey GS Wishwa N. Kapoor, Michael Karpf, Sam Wieand, Jacqueline R. Peterson, Gerald S. Levey},
   title   = {A prospective evaluation and follow-up of patients with syncope},
   journal = {New England Journal of Medical},
   year    = {1983},
+}
+
+@Misc{medicinenet_fracture,
+  author = {MedicineNet.com},
+  title  = {Falls and Fractures In Seniors},
+  year   = {2004},
+  url    = {https://www.medicinenet.com/script/main/art.asp?articlekey=7774},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
