--- a/Final_thesis/uw-ethesis.tex
+++ b/Final_thesis/uw-ethesis.tex
@@ -41,6 +41,7 @@
 \newacronym{ssf}{SSF}{Sensitivity Scale Factor}
 \newacronym{mcu}{MCU}{Micro-Controller Unit}
 \newacronym{iot}{IoT}{Internet-of-Things}
+\newacronym{us}{U.S.}{United State of America}
 
 
 \makeglossaries
@@ -171,7 +172,7 @@ Nowadays, fall is becoming a dangerous issue which mostly cause the injuries and
 Before starting a research about falls, it is necessary to understand about the meaning of the term \textit{falls}. According to \gls{who}, a fall is defined as an event which results in a person coming to rest inadvertently on the ground or floor or other lower level with or without loss of consciousness or injury \cite{who}. 
 
 \section{Cause of a Fall}
-In recent years, a lot of researches have been done by different groups to find out the causes of falls. There have been different ways to classify the causes of a fall such as age and sex, drugs, cognitive functions, postural control, etc. However, because falling is an unintentional action, many causes usually combine to produce a fall. Therefore, these causes can be divided into two main categories, intrinsic and extrinsic.
+In recent years, a lot of researches have been done by different groups to find out the causes of falls. There have been different ways to classify the causes of a fall such as age and sex, drugs, cognitive functions, postural control, etc. However, because falling is an unintentional action, many causes usually combine to produce a fall. Therefore, these causes can be divided into two main categories, intrinsic and extrinsic to ease the complication of research activities.
 \subsection{Intrinsic risk factors}
 Intrinsic factors are the factors which are within the body. It is also the physical aspect of the body that can cause injuries. Intrinsic factors include physical diseases such as cognitive impairment, postural hypotension, cardiovascular problems, etc.\par
 \vspace{0.3cm}
@@ -195,7 +196,14 @@ Dim lighting is one significant cause of fall on human, especially on the elderl
 
 Bad staircase design is also another extrinsic risk that cause the fall on human. Too high or too low rise of staircases have caused a number of falls because people fail to perceive the abnormal elevation change or incur a misstep on descent. Besides, slippery surface of the treads can cause strip on patients while walking up or down the stairs. One more mistake of staircase design that can lead to the fall is lighting on the stair. Poor visibility and inadequate lighting can cause a user to misread the stair edge, resulting in faulty foot placement and falls.
 \section{Consequence of Falls}
+The consequences of falls are serious to human at any age in any circumstance, but to the elderly they have significance beyond that in younger people. There are different consequences related to the falls on humans including physical effects, psychological effects and other consequences such as dependency, hospital admission or economic consequences. 
 
+\vspace{0.3cm}
+\textbf{\textit{Physical consequences}}\par
+
+Physical consequences of falls are always a significant aspect that many scientists have focused on in recent years. According to the \gls{ncoa} of the U.S., falls are the leading cause of fatal injuries and the most common cause of non-fatal traumas \cite{ncoa}. There are several physical injuries such as bruise, fracture or head injury reported to happen with patients who suffer from falls. In such injuries, hip fractures and head traumas are two common problems which usually analyzed by researchers when study about falls and their health effects. \par
+Hip fractures cause the greatest health problems and greatest number of death. It is reported that a quarter million hip fractures occur each year among people older than 50 years in the U.S. but more common in woman than men and increase in frequency with increasing age \cite{bibli_book} \cite{medicinenet_fracture}. Most patient with the hip fractures after falls are hospitalized for about 2 weeks. However, about half of all seniors cannot return home or live independently after that. In 1986, it costs for more than \$3 billion for direct medical treatment of hip fractures.\par 
+Head injuries are also usually happen to patients after suffering a fall. It is reported that people with the age of over 65 years old make up for 10-15 \% of admission to the hospital because of head injuries while three-quarters of them are caused by fall.  
 \section{Challenge in Detecting Falls and Motivation for This Thesis}
 
 \section{Objectives}
