--- a/Final_thesis/uw-ethesis.tex
+++ b/Final_thesis/uw-ethesis.tex
@@ -172,19 +172,19 @@ Nowadays, fall is becoming a dangerous issue which mostly cause the injuries and
 Before starting a research about falls, it is necessary to understand about the meaning of the term \textit{falls}. According to \gls{who}, a fall is defined as an event which results in a person coming to rest inadvertently on the ground or floor or other lower level with or without loss of consciousness or injury \cite{who}. 
 
 \section{Cause of a Fall}
-In recent years, a lot of researches have been done by different groups to find out the causes of falls. There have been different ways to classify the causes of a fall such as age and sex, drugs, cognitive functions, postural control, etc. However, because falling is an unintentional action, many causes usually combine to produce a fall. Therefore, these causes can be divided into two main categories, intrinsic and extrinsic to ease the complication of research activities.
+In recent years, a lot of researches have been done by different groups to find out the causes of falls. There have been different ways to classify the causes of a fall such as age and sex, drugs, cognitive functions, postural control, etc. However, because falling is an unintentional action, many causes usually combine to produce a fall. Therefore, these causes can be divided into two main categories, intrinsic and extrinsic, to ease the complication of research activities.
 \subsection{Intrinsic risk factors}
 Intrinsic factors are the factors which are within the body. It is also the physical aspect of the body that can cause injuries. Intrinsic factors include physical diseases such as cognitive impairment, postural hypotension, cardiovascular problems, etc.\par
 \vspace{0.3cm}
 \textbf{\textit{Cognitive Impairment}}\par
-It is well recognized that cognitive impairment is the common cause of fall on human, especially the elderly. Due to the research of Prudheim \textit{et al.} in 1981, fallers have in general been found to have a higher prevalence of cognitive impairment than non-fallers \cite{cognitive_1}. It is also reported that human with dementia are approximately 3 times more likely to fall than non-demented \cite{cognitive_2}. The reason why patients with cognitive impairment are likely to fall is that they have increased reaction time, increased postural sway and increased leaning balance which result in the decrease on muscle strength, worse balance and poorer mobility, respectively. \par
+It is well recognized that cognitive impairment is the common cause of fall on human, especially the elderly. Due to the research of Prudheim \textit{et al.} in 1981, fallers have in general been found to have a higher prevalence of cognitive impairment than non-fallers \cite{cognitive_1}. It is also reported that human with dementia are approximately 3 times more likely to fall than non-demented \cite{cognitive_2}. The reason why patients with cognitive impairment are likely to fall is that they have increased reaction time, increased postural sway and increased leaning balance which result in the decrease on muscle strength, worse balance and poorer mobility. \par
 \vspace{0.3cm}
 \textbf{\textit{Postural Control}}\par
 Postural control is a complex motor skill that requires interaction of multiple body systems which results in the ability to maintain postural orientation or postural stability \cite{postural_1}\cite{postural_2}. The impairment of postural control is indicated as one of significant causes of the fall during any activities at any age. Impaired control of gait and balance are two main aspects of the postural control that have been considered in many studies about falls. Subjectively assessed gait has been reported to be abnormal in many fall activities and other studies using more objective measurements have found some relations between the impaired gait and balance and risk of falling \cite{bibli_book}.
 
 \vspace{0.3cm}
 \textbf{\textit{Cardiovascular problem}}\par
-Cardiovascular disorders are responsible for approximately 77\% of patients with unexplained or recurrent falls and falls associated with unexplained loss of consciousness \cite{cardio_1}. There is a fact that fallers with cardiovascular disorders have a greater mortality than those with non-cardiovascular or unknown causes\cite{cardio_2}.   
+Cardiovascular disorders are responsible for approximately 77\% of patients with unexplained or recurrent falls and falls associated with unexplained loss of consciousness \cite{cardio_1}. There is a fact that fallers with cardiovascular disorders have a greater mortality than those with non-cardiovascular or unknown causes \cite{cardio_2}.   
 \subsection{Extrinsic risk factors}
 Extrinsic factors are those related to the environment such as lighting, walking surface, loose carpets, and high or narrow steps. 
 
@@ -201,9 +201,21 @@ The consequences of falls are serious to human at any age in any circumstance, b
 \vspace{0.3cm}
 \textbf{\textit{Physical consequences}}\par
 
-Physical consequences of falls are always a significant aspect that many scientists have focused on in recent years. According to the \gls{ncoa} of the U.S., falls are the leading cause of fatal injuries and the most common cause of non-fatal traumas \cite{ncoa}. There are several physical injuries such as bruise, fracture or head injury reported to happen with patients who suffer from falls. In such injuries, hip fractures and head traumas are two common problems which usually analyzed by researchers when study about falls and their health effects. \par
-Hip fractures cause the greatest health problems and greatest number of death. It is reported that a quarter million hip fractures occur each year among people older than 50 years in the U.S. but more common in woman than men and increase in frequency with increasing age \cite{bibli_book} \cite{medicinenet_fracture}. Most patient with the hip fractures after falls are hospitalized for about 2 weeks. However, about half of all seniors cannot return home or live independently after that. In 1986, it costs for more than \$3 billion for direct medical treatment of hip fractures.\par 
-Head injuries are also usually happen to patients after suffering a fall. It is reported that people with the age of over 65 years old make up for 10-15 \% of admission to the hospital because of head injuries while three-quarters of them are caused by fall.  
+Physical consequences of falls are always a significant aspect that many scientists have focused on in recent years. According to the \gls{ncoa} of the U.S., falls are the leading cause of fatal injuries and the most common cause of non-fatal traumas \cite{ncoa}. There are several physical injuries such as bruise, fracture or head injury reported to happen with patients who suffer from falls. In such injuries, hip fractures and head traumas are two common problems which usually analyzed by researchers. \par
+Hip fractures cause the greatest health problems and greatest number of death. It is reported that a quarter million hip fractures occur each year among people older than 50 years in the U.S. but more common in woman than men and increase in frequency with increasing age \cite{bibli_book} \cite{medicinenet_fracture}. Most patients with the hip fractures after falls are hospitalized, but about half of all seniors cannot return home or live independently after that. In 1986, it costs for more than \$3 billions for direct medical treatment of hip fractures.\par 
+Head injuries are also usually happen to patients after suffering a fall. It is reported that people with the age of over 65 years old make up for 10-15\% of admission to the hospital because of head injuries while three-quarters of them are caused by fall.  \par
+
+Finally, the most serious impacts of fall is fatal injuries causing death to patient. According to data from the \gls{who}, the fall morality rate of people with the age of over 65 in the \gls{us} (in 2003) was 36.8 per 100 000 citizens \cite{death_in_USA}. The main reason of these accidental death is that many patients have lie on the ground for several hours before receiving the help from caregivers. \par
+
+\vspace{0.3cm}
+\textbf{\textit{Psychological consequences}}\par
+Fall can result in long lasting psychological impact, called fear of falling again, more than just a short term injury. For those people who have fallen one time before seem to have a feeling of vulnerability which limits them from their normal activities. They may be worried about falling and hurting themselves again, thus stop going out on their own or reduce their level of physical activities. Unfortunately, in attempting to reduce their risk of falling, paradoxically, they may increase risk of falling because of the attenuation of physical functions. 	
+
+\vspace{0.3cm}
+\textbf{\textit{Other consequences}}\par
+Some research also indicated that there are other consequences such as dependency, hospital admission or economic consequence. As already mentioned, the fear of falling again prevent patients from living alone and start depending on the long-term nursing care. This consequence directly leads to increased dependency, which require more time and financial resources from both government and family. \par
+Falls are also the main reason for fallers to be admitted to hospital as an emergency case. Due to the information provided by Accident Department at a sample of hospitals in England and Wales, in 1998, approximately 200 000 people over 60 are treated at this hospital per year because of a fall at home \cite{other_consequence_1}.\par
+ 
 \section{Challenge in Detecting Falls and Motivation for This Thesis}
 
 \section{Objectives}
