First_draft_till_economy

--- a/Final_thesis/uw-ethesis.tex
+++ b/Final_thesis/uw-ethesis.tex
@@ -166,7 +166,7 @@
 %----------------------------------------------------------------------
 \section{Introduction to Fall}
 %---------------------------------------------------------------------
-Nowadays, fall is becoming a dangerous issue which mostly cause the injuries and even leads to disability or fatal death on human, especially the elderly. According to Hwang \textit{et.at.} \cite{static1}, in the United State, one-third to one-half of elderly people over 65 years old fall at least one time each year  and two-third of them will do so again within the next 6 months. Every 11 seconds, there is an elderly person is treated in the hospital's emergency area due to fall-related injuries and every 19 minutes, one faller die \cite{fall_die}. It is also reported that one out every 200 falls results in a hip fracture on people with age among 65 and 69 and increase to one out of 10 for those aged 85 and more \cite{hip_fracture}. The most profound effect of falling is the loss of functioning associated with the dependency of the elderly for the rest of their life. Besides, a great amount time and money have been spent on the medical treatments for the falls. Approximately \$179 million were used as direct medical costs for treating fatal falls and \$19 billion for non-fatal fall injuries within 2000 \cite{cost_fatal}.
+Nowadays, fall is becoming a dangerous issue which mostly cause the injuries and even leads to disability or fatal death on human, especially the elderly. According to Hwang \textit{et.at.} \cite{static1}, in the United State, one-third to one-half of elderly people over 65 years old fall at least one time each year  and two-third of them will do so again within the next 6 months. Every 11 seconds, there is an elderly person is treated in the hospital's emergency area due to fall-related injuries and every 19 minutes, one faller die \cite{ncoa}. It is also reported that one out every 200 falls results in a hip fracture on people with age among 65 and 69 and increase to one out of 10 for those aged 85 and more \cite{hip_fracture}. The most profound effect of falling is the loss of functioning associated with the dependency of the elderly for the rest of their life. Besides, a great amount time and money have been spent on the medical treatments for the falls. Approximately \$179 million were used as direct medical costs for treating fatal falls and \$19 billion for non-fatal fall injuries within 2000 \cite{cost_fatal}.
 
 \section{Definition of a Fall}
 Before starting a research about falls, it is necessary to understand about the meaning of the term \textit{falls}. According to \gls{who}, a fall is defined as an event which results in a person coming to rest inadvertently on the ground or floor or other lower level with or without loss of consciousness or injury \cite{who}. 
@@ -196,7 +196,7 @@ Dim lighting is one significant cause of fall on human, especially on the elderl
 
 Bad staircase design is also another extrinsic risk that cause the fall on human. Too high or too low rise of staircases have caused a number of falls because people fail to perceive the abnormal elevation change or incur a misstep on descent. Besides, slippery surface of the treads can cause strip on patients while walking up or down the stairs. One more mistake of staircase design that can lead to the fall is lighting on the stair. Poor visibility and inadequate lighting can cause a user to misread the stair edge, resulting in faulty foot placement and falls.
 \section{Consequence of Falls}
-The consequences of falls are serious to human at any age in any circumstance, but to the elderly they have significance beyond that in younger people. There are different consequences related to the falls on humans including physical effects, psychological effects and other consequences such as dependency, hospital admission or economic consequences. 
+The consequences of falls are serious to human at any age in any circumstance, but to the elderly they have significance beyond that in younger people. There are different consequences related to the falls on human including physical effects, psychological effects and other consequences such as dependency, hospital admission or economic consequences. 
 
 \vspace{0.3cm}
 \textbf{\textit{Physical consequences}}\par
@@ -209,13 +209,13 @@ Finally, the most serious impacts of fall is fatal injuries causing death to pat
 
 \vspace{0.3cm}
 \textbf{\textit{Psychological consequences}}\par
-Fall can result in long lasting psychological impact, called fear of falling again, more than just a short term injury. For those people who have fallen one time before seem to have a feeling of vulnerability which limits them from their normal activities. They may be worried about falling and hurting themselves again, thus stop going out on their own or reduce their level of physical activities. Unfortunately, in attempting to reduce their risk of falling, paradoxically, they may increase risk of falling because of the attenuation of physical functions. 	
+Fall can result in long lasting psychological impact, called fear of falling again, more than just a short term injury. For those people who have fallen one time before seem to have a feeling of vulnerability which limits them from their normal activities. They may be worried about falling and hurting themselves again, thus stop going out on their own or reduce their level of physical activities. Unfortunately, in attempting to reduce their risk of falling,  they may increase risk of falling because of the attenuation of physical functions. 	
 
 \vspace{0.3cm}
 \textbf{\textit{Other consequences}}\par
-Some research also indicated that there are other consequences such as dependency, hospital admission or economic consequence. As already mentioned, the fear of falling again prevent patients from living alone and start depending on the long-term nursing care. This consequence directly leads to increased dependency, which require more time and financial resources from both government and family. \par
+Some research indicated that there are other consequences such as dependency, hospital admission or economic consequence. As already mentioned, the fear of falling again prevent patients from living alone and start depending on the long-term nursing care. This consequence directly leads to increased dependency, which require more time and financial resources from both government and family. \par
 Falls are also the main reason for fallers to be admitted to hospital as an emergency case. Due to the information provided by Accident Department at a sample of hospitals in England and Wales, in 1998, approximately 200 000 people over 60 are treated at this hospital per year because of a fall at home \cite{other_consequence_1}.\par
- 
+Finally, falls are also a burden for economical aspect of every countries around the world, especially for low and lower middle countries. According to the U.S. Center for Disease Control and Prevention, in 2015, there was \$50 billion being used for fall injuries and expected to increase as the population ages and may reach \$67.7 billion by 2020 \cite{ncoa}.
 \section{Challenge in Detecting Falls and Motivation for This Thesis}
 
 \section{Objectives}
