--- a/Final_thesis/uw-ethesis.tex
+++ b/Final_thesis/uw-ethesis.tex
@@ -196,34 +196,36 @@ Dim lighting is one significant cause of fall on human, especially on the elderl
 
 Bad staircase design is also another extrinsic risk that cause the fall on human. Too high or too low rise of staircases have caused a number of falls because people fail to perceive the abnormal elevation change or incur a misstep on descent. Besides, slippery surface of the treads can cause strip on patients while walking up or down the stairs. One more mistake of staircase design that can lead to the fall is lighting on the stair. Poor visibility and inadequate lighting can cause a user to misread the stair edge, resulting in faulty foot placement and falls.
 \section{Consequence of Falls}
-The consequences of falls are serious to human at any age in any circumstance, but to the elderly they have significance beyond that in younger people. There are different consequences related to the falls on human including physical effects, psychological effects and other consequences such as dependency, hospital admission or economic consequences. 
+The consequences of falls are serious to human at any age in any circumstance, but to the elderly, they have significance beyond that in younger people. There are different consequences related to the falls on human including physical effects, psychological effects and other consequences such as dependency, hospital admission or economic consequences. 
 
 \vspace{0.3cm}
 \textbf{\textit{Physical consequences}}\par
 
 Physical consequences of falls are always a significant aspect that many scientists have focused on in recent years. According to the \gls{ncoa} of the U.S., falls are the leading cause of fatal injuries and the most common cause of non-fatal traumas \cite{ncoa}. There are several physical injuries such as bruise, fracture or head injury reported to happen with patients who suffer from falls. In such injuries, hip fractures and head traumas are two common problems which usually analyzed by researchers. \par
-Hip fractures cause the greatest health problems and greatest number of death. It is reported that a quarter million hip fractures occur each year among people older than 50 years in the U.S. but more common in woman than men and increase in frequency with increasing age \cite{bibli_book} \cite{medicinenet_fracture}. Most patients with the hip fractures after falls are hospitalized, but about half of all seniors cannot return home or live independently after that. In 1986, it costs for more than \$3 billions for direct medical treatment of hip fractures.\par 
-Head injuries are also usually happen to patients after suffering a fall. It is reported that people with the age of over 65 years old make up for 10-15\% of admission to the hospital because of head injuries while three-quarters of them are caused by fall.  \par
+Hip fractures cause the greatest health problems and greatest number of death. It is reported that a quarter million hip fractures occur each year among people older than 50 years in the U.S. but more common in woman than men and increase in frequency with increasing age \cite{bibli_book} \cite{medicinenet_fracture}. Most patients with the hip fractures after falls are hospitalized, but about half of them cannot return home or live independently after that. In 1986, it costs for more than \$3 billions for direct medical treatment of hip fractures \cite{medicinenet_fracture}.\par 
+
+Head injuries also usually happen to patients after suffering a fall. It is reported that people with the age of over 65 years old make up for 10-15\% of admission to the hospital because of head injuries while three-quarters of them are caused by fall \cite{bibli_book}. In California from 1996 to 1999, 71\% of fall-related head injuries occurred in adults aged 65 and more \cite{head_injury_1}. The head trauma from previous fall can increase the risk of repeated fall and head injuries in the near future.  \par
 
 Finally, the most serious impacts of fall is fatal injuries causing death to patient. According to data from the \gls{who}, the fall morality rate of people with the age of over 65 in the \gls{us} (in 2003) was 36.8 per 100 000 citizens \cite{death_in_USA}. The main reason of these accidental death is that many patients have lie on the ground for several hours before receiving the help from caregivers. \par
 
 \vspace{0.3cm}
 \textbf{\textit{Psychological consequences}}\par
-Fall can result in long lasting psychological impact, called fear of falling again, more than just a short term injury. For those people who have fallen one time before seem to have a feeling of vulnerability which limits them from their normal activities. They may be worried about falling and hurting themselves again, thus stop going out on their own or reduce their level of physical activities. Unfortunately, in attempting to reduce their risk of falling,  they may increase risk of falling because of the attenuation of physical functions. 	
-
+Fall can result in long lasting psychological impact, called fear of falling again, more than just short term injuries. For those people who have fallen one time before seem to have a feeling of vulnerability which limits them from their normal activities. They may be worried about falling and hurting themselves again, thus stop going out on their own or reduce their level of physical activities. Unfortunately, in attempting to reduce their risk of falling,  they may increase risk of falling because of the attenuation of physical functions and mobility. 	
+\cleardoublepage
 \vspace{0.3cm}
 \textbf{\textit{Other consequences}}\par
 Some research indicated that there are other consequences such as dependency, hospital admission or economic consequence. As already mentioned, the fear of falling again prevent patients from living alone and start depending on the long-term nursing care. This consequence directly leads to increased dependency, which require more time and financial resources from both government and family. \par
 Falls are also the main reason for fallers to be admitted to hospital as an emergency case. Due to the information provided by Accident Department at a sample of hospitals in England and Wales, in 1998, approximately 200 000 people over 60 are treated at this hospital per year because of a fall at home \cite{other_consequence_1}.\par
-Finally, falls are also a burden for economical aspect of every countries around the world, especially for low and lower middle countries. According to the U.S. Center for Disease Control and Prevention, in 2015, there was \$50 billion being used for fall injuries and expected to increase as the population ages and may reach \$67.7 billion by 2020 \cite{ncoa}.
-\section{Challenge in Detecting Falls and Motivation for This Thesis}
+Finally, falls are also a economic burden of every countries around the world, especially for low and lower middle countries. According to the U.S. Center for Disease Control and Prevention, in 2015, there was \$50 billion being used for fall injuries and expected to increase as the population ages and may reach \$67.7 billion by 2020 \cite{ncoa}. These costs are spent for hospitalization, medical, pharmaceutical, nursing home and other costs which related to the medical treatments for fall patients.
+
+\section{Challenges in Detecting Falls}
+As mentioned in previous section, most of patient's death is caused by the late assistance from caregivers after fall accidents. Timely detection can minimize the negative impacts of falls on patients. However, depend on age and physical condition, different people have different gaits, different balance ability that result in several types of falls. These falls can happen in any direction at any speed. Therefore, it is still a challenge to design a system which can detect successfully all the falls of patients. \par
+Another challenge in detecting the fall is that it is difficult for a system to distinguish a real fall from other fall-likes activities such as sitting, jumping or running, which also result in high acceleration. Therefore, it is required to collect a great amount of data from different subjects; and, then, there should be some analysis to find out the most common pattern of every fall. From that, researchers can design an algorithm to detect falls based on this pattern. However, it is not easy to collect real data for the system in the daily life on real human body, since it is an accidental, dangerous action which can happen randomly at any time. Therefore, it is a overwhelming task for researcher to built a dataset for their system. 
 
 \section{Objectives}
-
-\section{Overview of Thesis Works}
-
+From above challenges, it is necessary to study and design a wireless sensor network which can automatically detect the fall of patient and send alarm to the caregiver instantly to reduce their time of arrival, and hence reduce mortality rate. The sensor node is portable and attached on the chest of user. This sensor node contains one accelerometer and one gyroscope to provide information about the body's acceleration and angular velocity during the fall event. This sensor node can connect to the host computer via Wi-Fi with the help of Wi-Fi module called ESP8266 from ESPRESSIF\textregistered company and send data directly to a monitoring software on the computer. Upon detecting a fall, sensor node will wait for the safe signal from patient within next 10 minutes. If there is no response, an emergency email will be sent immediately to the caregiver. There is also a super bright red led on the sensor node to indicate the fall and help caregiver to easily find out the patient. 
 \section{Thesis Organization}
-
+In chapter 1, basic knowledge about falls as well as the causes and consequences of them are introduced. It is also provides the information about current challenges in detecting fall and motivation for this thesis. In chapter 2, a review of existing commercial fall detection devices in the market and researches related to this topic from  other research group. Chapter 3 describes the problem of fall detection and method to solve this problem. Also in this chapter is the description of algorithm used in this thesis. Chapter 4 describes the system with both hardware and software aspects. Chapter 5 and 6 describe the data collection and analysis procedure and result assessment of the experiments on real human body as well. Finally, chapter 7 gives the conclusion for this thesis, limitation of current solution and recommendation for future works.
 %======================================================================
 \chapter{Literature Review}
 
