--- a/Final_thesis/uw-ethesis.bib
+++ b/Final_thesis/uw-ethesis.bib
@@ -255,4 +255,11 @@
   year   = {1988},
 }
 
+@Article{head_injury_1,
+  author  = {MMWR Morb Mortal Wkly Rep},
+  title   = {Nonfatal fall-related traumatic brain injury among older adults—California, 1996–1999},
+  journal = {Morbidity and Mortality Weekly Report},
+  year    = {2003},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
